fixed alignment issue with list dropdown on accordion heading

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -70,3 +70,8 @@
 .list-options {
   float: right;
 }
+
+.list-dropdown {
+  right: 0;
+  left: auto;
+}
